tutorial addon: change file structure

--- a/mitmproxy/addons/tutorialapp/templates/frame.html
+++ b/mitmproxy/addons/tutorialapp/templates/frame.html
@@ -2,7 +2,7 @@
 {% block frame %}
 <div class="row">
     <nav class="col-md-2 bg-light sidebar sidebar-toc d-xl-block d-none">
-        {% include 'mitmproxy/toc.html' %}
+        {% include 'toc.html' %}
     </nav>
 
     <main role="main" class="col-lg-9 col-xl-7 ml-sm-auto px-md-4">
