--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/overview.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/overview.html
@@ -1,4 +1,4 @@
-{% extends "mitmproxy/frame.html" %}
+{% extends "frame.html" %}
 {% block content %}
 
 <h2 id="overview" class="pt-3 pb-3 mb-3 border-bottom">Overview</h2>
