--- a/mitmproxy/addons/tutorialapp/static/tutorial.css
+++ b/mitmproxy/addons/tutorialapp/static/tutorial.css
@@ -196,43 +196,12 @@ nav.navbar {
 }
 
 
-.instructions-wrapper {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 16px;
-}
-
-.instructions-wrapper ul, .instructions-wrapper ol {
-  list-style-position: inside;
-  padding-left: 0;
-}
-
-.instructions-wrapper li {
-  margin: 2px 0;
-  padding: 2px 0;
-}
-
-.instructions-wrapper li.active {
-  background-color: #ddd;
-}
-
 /*
- * asciinema annotations
+ * asciinema
  */
 
-
  .asciinema-wrapper, asciinema-player, .asciinema-player-wrapper {
-  display: inline-block;
-}
-.asciinema-wrapper {
-  position: relative;
-}
-
-.asciinema-wrapper .annotation {
-  position: absolute;
-  display: none;
-  color: #fff;
-  border: 1px solid rgba(255,255,255,.2);
-  background-color: rgba(255,255,255,0.15);
-  padding: 8px 20px;
+  display: block;
+  margin: 0 auto;
+  background-color: #121314;
 }
