tutorial addon: add recording scripts

--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/whats_next.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/whats_next.html
@@ -9,6 +9,15 @@
 
 <h2 id="view-flows" class="pt-3 pb-3 mb-3 border-bottom">Step 5: What's Next?</h2>
 
+<div class="interactions-wrapper">
+    <asciinema-player id="asciinema-player" src="/static/recordings/mitmproxy_whats_next.cast" font-size="13px" poster="npt:0:1" preload></asciinema-player>
+    {% if instructions %}
+        {% include 'instructions_simple.html' %}
+    {% endif %}
+</div>
+
+<hr>
+
 <p>The tutorial is not meant as a replacement for our extensive <a href="#">documentation</a> - mitmproxy has far more (advanced) features than what we show you.</p>
 
 <p>
