tutorial addon: side-by-side view of video + instruct.

--- a/mitmproxy/addons/tutorialapp/templates/voting_app.html
+++ b/mitmproxy/addons/tutorialapp/templates/voting_app.html
@@ -5,26 +5,24 @@
     Below you can vote for the two remaining candidates Lucy and Pete.
 </p>
 
-<div class="row">
+<div class="row text-center">
     <div class="col-xl-6 col-lg-12 col-6 mb-4 mb-xl-0">
         <div class="card">
-            <img src="/static/images/cat.jpg" class="figure-img img-fluid rounded" alt="Lucy the cat">
+            <img src="/static/images/cat.jpg" class="figure-img img-fluid rounded mb-0" alt="Lucy the cat">
             <div class="card-body">
-                <h5 class="card-title">Lucy the cat</h5>
                 <a href="/vote/cat" class="btn btn-primary btn-sm ajax-btn">Vote 😻</a>
                 <hr>
-                Votes: <span id="votes-cat" class="badge badge-primary">0</span>
+                <small>Votes: <span id="votes-cat" class="badge badge-primary">0</span></small>
             </div>
         </div>
     </div>
     <div class="col-xl-6 col-lg-12 col-6">
         <div class="card">
-            <img src="/static/images/dog.jpg" class="figure-img img-fluid rounded" alt="Pete the dog">
+            <img src="/static/images/dog.jpg" class="figure-img img-fluid rounded mb-0" alt="Pete the dog">
             <div class="card-body">
-                <h5 class="card-title">Pete the dog</h5>
                 <a href="/vote/dog" class="btn btn-primary btn-sm ajax-btn">Vote 🐺</a>
                 <hr>
-                Votes: <span id="votes-dog" class="badge badge-primary">0</span>
+                <small>Votes: <span id="votes-dog" class="badge badge-primary">0</span></small>
             </div>
         </div>
     </div>
