--- a/mitmproxy/addons/tutorialapp/static/tutorial.css
+++ b/mitmproxy/addons/tutorialapp/static/tutorial.css
@@ -200,8 +200,33 @@ nav.navbar {
  * asciinema
  */
 
- .asciinema-wrapper, asciinema-player, .asciinema-player-wrapper {
-  display: block;
-  margin: 0 auto;
+.interactions-wrapper {
+  display: flex;
+}
+
+.asciinema-wrapper, asciinema-player, .asciinema-player-wrapper {
   background-color: #121314;
+}
+
+.instructions-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.instructions {
+  flex-basis: 0px;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.list-group-item {
+  border: none;
+  border-top: 1px solid rgba(0,0,0,.125);
+  border-bottom: 1px solid rgba(0,0,0,.125);
+  border-radius: 0 !important;
+  padding: 0.75rem;
+}
+
+.list-group-item kbd {
+  padding: 0.1rem 0.3rem;
 }
