--- a/mitmproxy/addons/tutorialapp/templates/instructions_detailed.html
+++ b/mitmproxy/addons/tutorialapp/templates/instructions_detailed.html
@@ -1,13 +1,18 @@
-<div class="list-group">
-    {% for instr in instructions %}
-    <a href="#" class="list-group-item list-group-item-action" data-from="{{ instr.time_from }}" data-to="{{ instr.time_to }}">
-        <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{loop.index}}. {{ instr.title }}</h5>
-            <small>{{ instr.time_from_str }}</small>
-        </div>
-        <p class="mb-1">
-            {{ instr.instruction }}
-        </p>
-    </a>
-    {% endfor %}
+<div class="instructions-wrapper">
+    <h3 class="mt-0 ml-3">Instructions</h3>
+
+     <div class="instructions list-group">
+
+        {% for instr in instructions %}
+        <a href="#" class="list-group-item list-group-item-action" data-from="{{ instr.time_from }}" data-to="{{ instr.time_to }}">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">{{loop.index}}. {{ instr.title }}</h5>
+                <small>{{ instr.time_from_str }}</small>
+            </div>
+            <p class="mb-1">
+                {{ instr.instruction }}
+            </p>
+        </a>
+        {% endfor %}
+    </div>
 </div>
