--- a/mitmproxy/addons/tutorialapp/templates/instructions_simple.html
+++ b/mitmproxy/addons/tutorialapp/templates/instructions_simple.html
@@ -1,10 +1,10 @@
-<div class="instructions">
-   <h3>Instructions <small class="text-muted">with Timecodes</small></h3>
+<div class="instructions-wrapper">
+   <h3 class="mt-0 ml-3">Instructions</h3>
 
-    <div class="list-group">
+    <div class="instructions list-group">
         {% for instr in instructions %}
         <a href="#" class="list-group-item d-flex justify-content-between align-items-center list-group-item-action" data-from="{{ instr.time_from }}" data-to="{{ instr.time_to }}">
-            {{ instr.instruction }}
+            <span class="instruction-text">{{ instr.instruction|safe }}</span>
             <span class="badge badge-primary badge-pill">{{ instr.time_from_str }}</span>
         </a>
         {% endfor %}
