tutorial addon: add tutorial content

--- a/mitmproxy/addons/tutorialapp/static/tutorial.css
+++ b/mitmproxy/addons/tutorialapp/static/tutorial.css
@@ -202,6 +202,11 @@ nav.navbar {
 
 .interactions-wrapper {
   display: flex;
+  padding: 1rem;
+  border-top: 1px solid rgba(0,0,0,.1);
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  margin: 2rem 0;
+  background-color: #fcfcfc;
 }
 
 .asciinema-wrapper, asciinema-player, .asciinema-player-wrapper {
@@ -211,22 +216,28 @@ nav.navbar {
 .instructions-wrapper {
   display: flex;
   flex-direction: column;
+  margin-left: 1rem;
+  flex: 1;
 }
 
 .instructions {
   flex-basis: 0px;
   flex-grow: 1;
   overflow-y: auto;
+  border: 1px solid rgba(0,0,0,.1);
 }
 
 .list-group-item {
   border: none;
-  border-top: 1px solid rgba(0,0,0,.125);
-  border-bottom: 1px solid rgba(0,0,0,.125);
+  border-bottom: 1px solid rgba(0,0,0,.05);
   border-radius: 0 !important;
   padding: 0.75rem;
 }
 
 .list-group-item kbd {
   padding: 0.1rem 0.3rem;
+}
+
+.list-group-item.active code {
+  color: #fff;
 }
