--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/modify_requests.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/modify_requests.html
@@ -13,6 +13,13 @@
     Yet to be written.
 </p>
 
+<div class="interactions-wrapper">
+    <asciinema-player id="asciinema-player" src="/static/recordings/mitmproxy_modify_requests.cast" font-size="13px" poster="npt:0:0.5" preload></asciinema-player>
+    {% if instructions %}
+        {% include 'instructions.html' %}
+    {% endif %}
+</div>
+
 <hr>
 
 <p class="d-flex">
