--- a/mitmproxy/addons/tutorialapp/templates/instructions.html
+++ b/mitmproxy/addons/tutorialapp/templates/instructions.html
@@ -1,6 +1,4 @@
 <div class="instructions-wrapper">
-   <h3 class="mt-0 ml-3">Instructions</h3>
-
     <div class="instructions list-group">
         {% for instr in instructions %}
         <a href="#" class="list-group-item d-flex justify-content-between align-items-center list-group-item-action" data-from="{{ instr.time_from }}" data-to="{{ instr.time_to }}">
@@ -9,4 +7,5 @@
         </a>
         {% endfor %}
     </div>
+    <p class="text-center text-muted mt-1 mb-0"><small>Clicking on an instruction takes you to the corresponding part in the video.</small></p>
 </div>
