--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/user_interface.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/user_interface.html
@@ -9,145 +9,29 @@
 
 <h2 id="view-flows" class="pt-3 pb-3 mb-3 border-bottom">Step 1: User Interface</h2>
 
-<div class="interactions-wrapper">
-    <div class="instructions-inner-wrapper">
-        <asciinema-player id="asciinema-player" src="/static/recordings/mitmproxy_user_interface.cast" font-size="13px" preload></asciinema-player>
-    </div>
-    {% if instructions %}
-        {% include 'instructions_detailed.html' %}
-    {% endif %}
-</div>
-
-<hr>
-
-<h2>Old Content</h2>
-
 <p>
     First of all, we need to become familiar with mitmproxy's user interface.
     Open the terminal window in which you started mitmproxy.
-    You should see the <em>default view</em> of mitmproxy, which shows a table-like list of flows.
-    Every line represents a request and (optionally) its response using the following columns:
+    You are in the default view of mitmproxy, which shows a list of flows.
+    You should see your browser's HTTP requests to load this tutorial.
+    mitmproxy adds rows to the view as new requests come in.
 </p>
 
-<table class="table table-sm">
-    <thead>
-      <tr>
-        <th scope="col">Time</th>
-        <th scope="col">Protocol</th>
-        <th scope="col">Method</th>
-        <th scope="col">Host</th>
-        <th scope="col">Path</th>
-        <th scope="col">Response code</th>
-        <th scope="col">Response size</th>
-        <th scope="col">Response time</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><code>&gt;&gt;</code> 18:37:23</td>
-        <td>HTTP</td>
-        <td>GET</td>
-        <td>tutorial.mitm.it</td>
-        <td>/</td>
-        <td>200</td>
-        <td>3k</td>
-        <td>179ms</td>
-      </tr>
-    </tbody>
-  </table>
-<p>
-    <!-- The columns show the date, protocol, method, URL of the flow, among other details on the right. -->
-    In your started instance of mitmproxy you see your browser's HTTP requests to load this tutorial.
-    The <code>&gt;&gt;</code> next to the first flow on the right denotes the currently focussed flow - more on that below.
-    mitmproxy adds rows to the view as new requests come in. Let's try that out:
-</p>
-
-<ol>
-    <li>Use the voting app on the right to generate a vote for your favorite pet.</li>
-    <li>Watch how mitmproxy creates a new line for every vote you submit.</li>
-</ol>
-
-<figure class="figure">
-    <img src="/static/images/mitmproxy_flow_list.png" alt="..." class="figure-img img-fluid rounded">
-    <figcaption class="figure-caption text-center">mitmproxy's default view</figcaption>
-</figure>
-
-<p>
-    mitmproxy is controlled using keyboard shortcuts:
-</p>
-
-<ol>
-    <li>Use your arrow keys <kbd>🠗</kbd> and <kbd>🠕</kbd> to change the focused flow (<code>&gt;&gt;</code>).</li>
-    <li>Put the focus on the flow requesting <code>/votes</code>.</li>
-    <li>Press <kbd>ENTER</kbd> to view the details of the flow.</li>
-</ol>
-
-<p>You are now in the <em>flow details view</em> of the flow that requested <code>/votes</code>:</p>
-
-<figure class="figure">
-    <img src="/static/images/mitmproxy_flow_detail.png" alt="..." class="figure-img img-fluid rounded">
-    <figcaption class="figure-caption text-center">mitmproxy's flow details view</figcaption>
-</figure>
-
-<p>
-    The <em>flow details view</em> has 3 panes: request, response, and detail.
-    The request and response panes show you the HTTP headers and the content of the message below.
-    The detail pane gives you timing information, certificate details, among other infos.
-</p>
-
-<ol>
-    <li>Use your arrow keys <kbd>🠔</kbd> and <kbd>🠖</kbd> to switch between panes.</li>
-    <li>
-        Try to figure out what the <code>/votes</code> endpoint of the voting application returns.
-        <a class="btn btn-xs btn-outline-secondary" data-toggle="collapse" href="#collapse-hint-votes-endpoint" role="button" aria-expanded="false" aria-controls="collapse-hint-votes-endpoint">
-            Show solution
-        </a>
-    </li>
-    <li>Press <kbd>q</kbd> to go back to the <em>default view</em>. This shortcut works globally and exits the current view.</li>
-    <li>Press <kbd>?</kbd> to view a list of all available keyboard shortcuts in the current view. If you only remember one shortcut, it should be this one.</li>
-    <li>Press <kbd>q</kbd> to go back to the <em>default view</em>.</li>
-</ol>
-
-
-<div class="collapse mb-4" id="collapse-hint-votes-endpoint">
-    <div class="card card-body">
-        <p class="mb-0">
-            The <code>/votes</code> endpoint returns the current vote count for the cat and the dog as a JSON object, e.g. <code>{"cat": 2, "dog": 5}</code>.
-        </p>
-    </div>
+<div class="interactions-wrapper">
+    <asciinema-player id="asciinema-player" src="/static/recordings/mitmproxy_user_interface.cast" font-size="13px" poster="npt:0:1" preload></asciinema-player>
+    {% if instructions %}
+        {% include 'instructions.html' %}
+    {% endif %}
 </div>
 
 <div class="alert alert-primary" role="alert">
-    Advanced Tip: You can re-map shortcuts in mitmproxy's <a href="https://docs.mitmproxy.org/stable/tools-mitmproxy/#key-binding-configuration" target="_blank">configuration file</a>.
+    Tip: Pressing <kbd>?</kbd> gives you a list of all keyboard shortcuts. It works in every view. If you only remember one shortcut, it should be this one.
 </div>
 
 <p>
     You should now have an idea of how to control mitmproxy.
     You will learn more keyboard shortcuts as we go along.
 </p>
-
-<p>
-    <a class="btn btn-sm btn-outline-secondary" data-toggle="collapse" href="#collapse-commands" role="button" aria-expanded="false" aria-controls="collapse-commands">
-      Show bonus lesson: control mitmproxy using commands
-    </a>
-</p>
-
-<div class="collapse mb-4" id="collapse-commands">
-    <div class="card card-body">
-        <p class="mb-0">
-            Every shortcut in mitmproxy is internally bound to a command.
-            You can also execute commands directly (without using the shortcut):
-        </p>
-        <ul>
-            <li>Press <kbd>:</kbd> to open the command prompt at the bottom of the window.</li>
-            <li>Enter <kbd>console.view.flow @focus</kbd> and press <kbd>ENTER</kbd> to open the flow details view for the focussed flow.</li>
-        </ul>
-        <p>
-            This is the equal to pressing <kbd>ENTER</kbd> in the <em>default view</em> to open the <em>flow details view</em>.
-            Controlling mitmproxy using commands is a powerful feature for advanced users.
-        </p>
-    </div>
-</div>
 
 <hr>
 
