tutorial addon: add and improve content

--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/modify_requests.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/modify_requests.html
@@ -10,7 +10,9 @@
 <h2 id="view-flows" class="pt-3 pb-3 mb-3 border-bottom">Step 3: Modify Requests</h2>
 
 <p>
-    Yet to be written.
+    In the previous step we resumed intercepted requests without changes.
+    The full power of interceptions comes to play when we modify an intercepted request before forwarding it to its destination.
+    You can continue with the window and the already configured interception rule from the previous step.
 </p>
 
 <div class="interactions-wrapper">
@@ -19,6 +21,10 @@
         {% include 'instructions.html' %}
     {% endif %}
 </div>
+
+<p>
+    In the next step, you will learn to replay previous flows.
+</p>
 
 <hr>
 
