--- a/mitmproxy/addons/tutorialapp/templates/voting_app.html
+++ b/mitmproxy/addons/tutorialapp/templates/voting_app.html
@@ -1,8 +1,9 @@
 <h2 class="pb-3 mb-3 border-bottom">Voting App</h2>
 
 <p>
-    Welcome to the finals of our shocked animal competition.
-    Below you can vote for the two remaining candidates Lucy and Pete.
+    This is a demo app that allows you to generate requests.
+    Each request will be shown in your mitmproxy instance.
+    We will use this app throughout the tutorial.
 </p>
 
 <div class="row text-center">
