--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/whats_next.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/whats_next.html
@@ -9,28 +9,32 @@
 
 <h2 id="view-flows" class="pt-3 pb-3 mb-3 border-bottom">Step 5: What's Next?</h2>
 
-<p>The tutorial is not meant as a replacement for our extensive <a href="#">documentation</a> - mitmproxy has far more (advanced) features than what we show you.</p>
-
 <p>
-    <a class="btn btn-sm btn-outline-secondary" data-toggle="collapse" href="#collapse-how-tutorial-app-implemented" role="button" aria-expanded="false" aria-controls="collapse-how-tutorial-app-implemented">
-      Optional: How is this tutorial implemented?
-    </a>
+    Congratulations! 🎉 You have successfully completed the mitmproxy tutorial. We hope it was worthwhile and helped you getting up to speed with mitmproxy.<br>
 </p>
 
-<div class="collapse mb-4" id="collapse-how-tutorial-app-implemented">
-    <div class="card card-body">
-        <p class="mb-0">
-            This tutorial is implemented as a mitmproxy <a href="https://docs.mitmproxy.org/stable/addons-overview/">addon</a>.
-            Addons allow to easily extend the functionality of mitmproxy using its API.
-            The tutorial addon intercepts all HTTP requests.
-            If the request's HTTP <code>Host</code> header is <code>tutorial.mitm.it</code>, the request is redirected to the tutorial's web application.
-            The web application itself is implemented using <a href="https://palletsprojects.com/p/flask/">Flask</a>.
-            All other intercepted requests are forwarded to their original destination without modification.
-            The core of the tutorial addon has less than 100 lines of code.
-            The details go beyond the scope of this tutorial, but it should give you a glance of the advanced features you can implement with mitmproxy.
-        </p>
-    </div>
-</div>
+<p>
+    Is there anything you feel is missing? Or anything that is not clear? Please let us know in our <a href="https://github.com/mitmproxy/mitmproxy/issues/3142" target="_blank"> dedicated issue on GitHub</a>.
+</p>
+
+<h3>Resources</h3>
+<ul>
+    <li><strong><a href="https://docs.mitmproxy.org/stable/" target="_blank">Documentation.</a></strong> This tutorial is not meant as a replacement for our extensive docs. mitmproxy has far more features than what we've shown you.</li>
+    <li><strong><a href="https://github.com/mitmproxy/" target="_blank">GitHub.</a></strong> If you want to contribute to mitmproxy or submit a bug report or other feedback, please do so on GitHub.</li>
+    <li><strong><a href="https://mitmproxy.slack.com" target="_blank">Slack.</a></strong> If you want to get in touch with the developers or other users, please use our Slack channel.</li>
+</ul>
+
+<h3>Bonus lesson: How is this tutorial implemented?</h3>
+<p>
+    This tutorial is implemented as a mitmproxy <a href="https://docs.mitmproxy.org/stable/addons-overview/">addon</a>.
+    Addons allow to easily extend the functionality of mitmproxy using its API.
+    The tutorial addon intercepts all HTTP requests.
+    If the request's HTTP <code>Host</code> header is <code>tutorial.mitm.it</code>, the request is redirected to the tutorial's web application.
+    The web application itself is implemented using <a href="https://palletsprojects.com/p/flask/">Flask</a>.
+    All other intercepted requests are forwarded to their original destination without modification.
+    The core of the tutorial addon has less than 100 lines of code.
+    The details go beyond the scope of this tutorial, but it should give you a glance of the advanced features that you can implement with mitmproxy.
+</p>
 
 <hr>
 
