make columns configurable and customizable

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -125,6 +125,9 @@
     .col-time {
         width: 50px;
     }
+    .col-timestamp {
+        width: auto;
+    }
     td.col-time, td.col-size {
         text-align: right;
     }
