--- a/docs/src/layouts/partials/sidebar.html
+++ b/docs/src/layouts/partials/sidebar.html
@@ -8,6 +8,9 @@
     <p class="menu-label"> Overview </p>
     {{ partial "sidemenu" (dict "ctx" . "menuname" "overview") }}
 
+    <p class="menu-label">mitmproxy Tutorial</p>
+    {{ partial "sidemenu" (dict "ctx" . "menuname" "mitmproxytutorial") }}
+
     <p class="menu-label">Tools</p>
     {{ partial "sidemenu" (dict "ctx" . "menuname" "tools") }}
 
