--- a/docs/src/layouts/shortcodes/asciicast.html
+++ b/docs/src/layouts/shortcodes/asciicast.html
@@ -11,7 +11,7 @@
             {{- range $instr := $data -}}
                 <a href="#" class="panel-block" data-from="{{ $instr.time_from }}" data-to="{{ $instr.time_to }}">
                     <span class="instruction-text">{{ $instr.instruction | markdownify }}</span>
-                    <span class="tag is-light">{{ $instr.time_from_str }}</span>
+                    <span class="tag is-light">{{ int $instr.time_from | dateFormat "04:05" }}</span>
                 </a>
             {{- end -}}
         </article>
