[docs] minor docs improvements

--- a/docs/src/layouts/partials/sidebar.html
+++ b/docs/src/layouts/partials/sidebar.html
@@ -5,10 +5,10 @@
 
 </div>
 <nav class="menu">
-    <p class="menu-label"> Overview </p>
+    <p class="menu-label">Overview</p>
     {{ partial "sidemenu" (dict "ctx" . "menuname" "overview") }}
 
-    <p class="menu-label">mitmproxy Tutorial</p>
+    <p class="menu-label">Beginner Tutorial</p>
     {{ partial "sidemenu" (dict "ctx" . "menuname" "mitmproxytutorial") }}
 
     <p class="menu-label">Core concepts</p>
