--- a/mitmproxy/addons/onboardingapp/templates/index.html
+++ b/mitmproxy/addons/onboardingapp/templates/index.html
@@ -62,6 +62,7 @@
     {% call entry('iOS <small>– please read the instructions!</small>', 'apple') %}
     <h5>iOS 13+</h5>
     <ol>
+        <li>Use Safari to download the certificate. Other browsers may not open the proper installation prompt.</li>
         <li>Install the new Profile and activate it (<samp>Settings -> General</samp> ->
             <samp>Profile</samp>).
         </li>
