--- a/docs/src/layouts/partials/edit-on-github.html
+++ b/docs/src/layouts/partials/edit-on-github.html
@@ -1,4 +1,4 @@
-{{ if and .IsPage (not (getenv "DOCS_ARCHIVE")) }}
+{{ if and .IsPage (ne .Type "api") (not (getenv "DOCS_ARCHIVE")) }}
 <a class="button is-small is-outlined is-link is-pulled-right"
    target="_blank"
    href="https://github.com/mitmproxy/mitmproxy/blob/master/docs/src/content/{{ .File.Path }}"
@@ -6,4 +6,3 @@
     Edit on GitHub
 </a>
 {{ end }}
-
