Add one-click-resume button

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -128,6 +128,10 @@
     .col-timestamp {
         width: auto;
     }
+    .col-forward {
+        width: 50px;
+        padding: 5px;
+    }
     td.col-time, td.col-size {
         text-align: right;
     }
