--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -129,10 +129,9 @@
         width: auto;
     }
     .col-forward {
-        width: 50px;
-        padding: 5px;
+        width: 70px;
     }
-    td.col-time, td.col-size {
+    td.col-time, td.col-size, td.col-forward {
         text-align: right;
     }
 }
