--- a/web/src/css/header.less
+++ b/web/src/css/header.less
@@ -3,7 +3,7 @@
 @import (reference) "../../node_modules/bootstrap/less/mixins/labels.less";
 @import (reference) "../../node_modules/bootstrap/less/labels.less";
 
-@menu-height: 100px;
+@menu-height: 95px;
 
 header {
     padding-top: 6px;
@@ -20,22 +20,16 @@ header {
 }
 
 @menu-legend-height: 16px;
-@menu-group-hmargin: 3px;
+@menu-group-hmargin: 5px;
 .menu-group {
-    margin: 0 @menu-group-hmargin;
+    margin: 0 @menu-group-hmargin 0 (@menu-group-hmargin + 1px);
     display: inline-block;
     height: @menu-height;
-    vertical-align: top;
-}
-
-.flow-menu {
-    .make-row(@menu-main-gutter-width);
-    padding: 2px 5px;
 }
 
 .menu-content {
     height: @menu-height - @menu-legend-height;
-    text-align: center;
+    display: flow-root;
 
     > .btn {
         height: @menu-height - @menu-legend-height;
@@ -51,8 +45,14 @@ header {
         }
     }
 
-    > div.resume-all.btn.btn-default {
-        height: 50px;
+    > .btn.btn-sm {
+        height: (@menu-height - @menu-legend-height)/3;
+        padding: 0 5px;
+        i {
+            display: inline-block;
+            font-size: 14px;
+            margin: 0;
+        }
     }
 }
 
@@ -74,6 +74,7 @@ header {
 }
 
 .menu-legend {
+    color: #777;
     height: @menu-legend-height;
     text-align: center;
     font-size: 12px;
@@ -82,7 +83,7 @@ header {
 
 .menu-group + .menu-group:before {
     @space: 10px;
-    margin-left: -@menu-group-hmargin;
+    margin-left: -(@menu-group-hmargin + 1px);
     content: " ";
     border-left: solid 1px lighten(grey, 40%);
     margin-top: @space;
@@ -91,26 +92,20 @@ header {
 }
 
 @menu-main-gutter-width: 5px;
-.menu-main {
-    .make-row(@menu-main-gutter-width);
+.main-menu {
     display: flex;
-    padding: 2px 5px;
     .menu-group {
-        width: 100%;
+        width: 50%;
     }
-    .btn {
-        float: left;
+    .btn-sm {
+        margin-top: 6px;
     }
 }
 
 .filter-input {
-    width: 100%;
-    padding: 2.5px;
+    margin: 4px 0;
 
     @media (max-width: @screen-xs-max) {
-
-        padding: 2px 2.5px;
-
         > .form-control, > .input-group-addon, > .input-group-btn > .btn {
             height: 23.5px;
             padding: 1px 5px;
