--- a/web/src/css/app.less
+++ b/web/src/css/app.less
@@ -19,3 +19,4 @@ html {
 @import (less) "codemirror.less";
 @import (less) "contentview.less";
 @import (less) "modal.less";
+@import (less) "dropdown.less";
