--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -17,14 +17,14 @@
         table-layout: fixed;
     }
 
-    thead {
+    thead tr {
         background-color: #F2F2F2;
+        border-bottom: solid #bebebe 1px;
         line-height: 23px;
     }
 
     th {
         font-weight: normal;
-        box-shadow: 0 1px 0 #a6a6a6;
         position: relative !important;
         padding-left: 1px;
         .user-select(none);
@@ -155,12 +155,15 @@
     .col-quickactions {
         width: 0;
         direction: rtl;
+        * {
+            direction: ltr;
+        }
         overflow: hidden;
         background-color: inherit;
         font-size: 20px;
     }
 
-    tr:hover .col-quickactions {
+    tr:hover .col-quickactions, .col-quickactions.hover {
         overflow: visible;
     }
 
@@ -170,72 +173,24 @@
         display: inline-flex;
         align-items: center;
 
-        div {
+        > a {
             margin-right: 2px;
             height: 32px;
             width: 32px;
             border-radius: 16px;
+            text-align: center;
 
-            &:hover {
-            background-color: rgba(0, 0, 0, 5%);
+            &:hover, &.open {
+                background-color: rgba(0, 0, 0, 5%);
             }
         }
     }
 
     .col-quickactions .fa-ellipsis-h {
-        transform: translate(-3px, 3px);
+        transform: translate(0, 3px);
     }
 
     .col-quickactions .fa-play {
-        transform: translate(-1px, 2px);
+        transform: translate(1px, 2px);
     }
-
-    .dropdown-submenu {
-        position:relative;
-    }
-
-    .dropdown-submenu>.dropdown-menu {
-        top:0;
-        left:100%;
-        margin-top:-6px;
-        margin-left:-1px;
-        -webkit-border-radius:0 6px 6px 6px;
-        -moz-border-radius:0 6px 6px 6px;
-        border-radius:0 6px 6px 6px;
-    }
-
-    .dropdown-submenu:hover>.dropdown-menu {
-        display:block;
-    }
-
-    .dropdown-submenu>a:after {
-        display:block;
-        content:" ";
-        float:right;
-        width:0;
-        height:0;
-        border-color:transparent;
-        border-style:solid;
-        border-width:5px 0 5px 5px;
-        border-left-color:#cccccc;
-        margin-top:5px;
-        margin-right:-10px;
-    }
-
-    .dropdown-submenu:hover>a:after {
-        border-left-color:#ffffff;
-    }
-
-    .dropdown-submenu.pull-left {
-        float:none;
-    }
-    
-    .dropdown-submenu.pull-left>.dropdown-menu {
-        left:-100%;
-        margin-left:10px;
-        -webkit-border-radius:6px 0 6px 6px;
-        -moz-border-radius:6px 0 6px 6px;
-        border-radius:6px 0 6px 6px;
-    }
-
 }
